# wasm-plugin-framework

./: README.md
wasm-plugin-framework/: Cargo.toml
wasm-plugin-framework/src/: abi.rs  lib.rs
wasm-plugin-framework/wasm-plugin-framework-macros/: Cargo.toml
wasm-plugin-framework/wasm-plugin-framework-macros/src/: common_impl.rs  lib.rs  plugin_impl.rs
wasm-plugin-test/: Cargo.toml
wasm-plugin-test/common/: Cargo.toml
wasm-plugin-test/common/src/: lib.rs
wasm-plugin-test/host/: .gitignore  Cargo.toml
wasm-plugin-test/host/src/: main.rs  wasm.wasm
wasm-plugin-test/wasm/: Cargo.toml
wasm-plugin-test/wasm/src/: lib.rs
