[package]
name = "wasm-plugin-framework"
version = "0.1.0"
authors = ["ThePerkinrex <theperkinrex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-plugin-framework-macros = {path = "./wasm-plugin-framework-macros"}
bincode = "1"
serde = "1"
lazy_static = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmer-wasi = "1"
wasmer = {version = "1", no-default-features = true, features = ["default-cranelift", "default-jit"]}
