[package]
name = "wasm-plugin-framework-macros"
version = "0.1.0"
authors = ["ThePerkinrex <theperkinrex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.9"
syn = "1.0.72"
proc-macro2 = "1.0.27"
lazy_static = "1.4.0"

[lib]
proc-macro = true