[package]
name = "host"
version = "0.1.0"
authors = ["ThePerkinrex <theperkinrex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer-wasi = "1.0.2"
wasmer = {version = "1.0.2", no-default-features = true, features = ["default-cranelift", "default-jit"]}
anyhow = "1.0"
common = {path = "../common"}